--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css",
-    "start": "node -v"
+    "start": "sass --watch sass/main.scss css/style.css"
   },
   "repository": {
     "type": "git",
@@ -17,7 +16,7 @@
     "url": "https://github.com/josphatmuteru/Advanced-CSS-and-SASS/issues"
   },
   "homepage": "https://github.com/josphatmuteru/Advanced-CSS-and-SASS#readme",
-  "devDependencies": {
-    "node-sass": "^9.0.0"
+  "dependencies": {
+    "sass": "^1.63.2"
   }
 }
